--- a/.github/workflows/main_app-step4-24.yml
+++ b/.github/workflows/main_app-step4-24.yml
@@ -21,7 +21,6 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd step4_pos_be
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
@@ -31,4 +30,5 @@ jobs:
           app-name: app-step4-24
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ./step4_pos_be
+          package: .
+
