--- a/.github/workflows/main_app-step4-24.yml
+++ b/.github/workflows/main_app-step4-24.yml
@@ -3,8 +3,8 @@ name: Deploy FastAPI to Azure App Service
 on:
   push:
     branches:
-      - main # main ブランチへのプッシュ時に実行
-  workflow_dispatch: # 手動実行を許可
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
@@ -24,35 +24,28 @@ jobs:
           pip install -r requirements.txt
 
       - name: Copy application files
-        # アプリケーションコードと依存関係を含むディレクトリを準備します。
-        # この例では、requirements.txt と 'app' ディレクトリをパッケージ化すると仮定しています。
-        # FastAPIアプリケーションが app/main.py にある場合など、必要に応じて調整してください。
-        # 例えば、FastAPIアプリケーションのルートが 'app' ディレクトリの場合、
-        # このステップは不要で、そのまま 'package: .' を使用できます。
-        # しかし、明確に「デプロイするファイル群」を定義したい場合は有効です。
         run: |
           mkdir deploy_package
           cp -r app deploy_package/
           cp requirements.txt deploy_package/
-          # その他の必要なファイル（例: .env.production, static files, templates など）
-          # cp .env.production deploy_package/
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
+      - name: Upload artifact # ここを修正
+        uses: actions/upload-artifact@v4 # v3 から v4 に変更
         with:
-          name: fastapi-app # Artifact の名前
-          path: deploy_package/ # アップロードするディレクトリ
+          name: fastapi-app
+          path: deploy_package/
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build # このジョブは 'build' ジョブが成功した後にのみ実行されます
-    environment: production # 環境を指定することもできます（オプション）
+    needs: build
+    environment: production
 
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
+      - name: Download artifact # ここも修正が必要な場合があります（v4アップロードと組み合わせるため）
+        uses: actions/download-artifact@v4 # v3 から v4 に変更
         with:
-          name: fastapi-app # 'build' ジョブでアップロードした Artifact の名前
+          name: fastapi-app
+          path: . # ダウンロードパスを明示的に指定（v4では推奨）
 
       - name: List downloaded files (for debugging)
         run: ls -R
@@ -63,6 +56,4 @@ jobs:
           app-name: app-step4-24
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          # build ジョブで準備したパッケージのパスを指定します。
-          # 今回は 'deploy_package/' の中身がカレントディレクトリにダウンロードされるため '.' でOKです。
           package: .
